<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.dmetasoul</groupId>
        <artifactId>lakesoul-parent</artifactId>
        <version>${revision}</version>
    </parent>

    <name>LakeSoul Spark Gluten</name>
    <artifactId>lakesoul-spark-gluten</artifactId>
    <version>3.3-${revision}</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <gluten.version>1.6.0-SNAPSHOT</gluten.version>
        <scalatest.version>3.2.14</scalatest.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.gluten</groupId>
            <artifactId>gluten-core</artifactId>
            <version>${gluten.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.gluten</groupId>
                    <artifactId>spark-sql-columnar-shims-spark34</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.gluten</groupId>
            <artifactId>gluten-arrow</artifactId>
            <version>${gluten.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.gluten</groupId>
                    <artifactId>spark-sql-columnar-shims-spark34</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.gluten</groupId>
            <artifactId>gluten-substrait</artifactId>
            <version>${gluten.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.gluten</groupId>
                    <artifactId>spark-sql-columnar-shims-spark34</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.gluten</groupId>
            <artifactId>spark-sql-columnar-shims-common</artifactId>
            <version>${gluten.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.gluten</groupId>
                    <artifactId>spark-sql-columnar-shims-spark34</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.gluten</groupId>
            <artifactId>spark-sql-columnar-shims-spark33</artifactId>
            <version>${gluten.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.gluten</groupId>
                    <artifactId>spark-sql-columnar-shims-spark34</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.gluten</groupId>
            <artifactId>backends-velox</artifactId>
            <version>${gluten.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.gluten</groupId>
                    <artifactId>spark-sql-columnar-shims-spark34</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.dmetasoul</groupId>
            <artifactId>lakesoul-spark</artifactId>
            <version>3.3-${revision}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.arrow</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.dmetasoul</groupId>
            <artifactId>lakesoul-spark</artifactId>
            <version>3.3-${revision}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.12</artifactId>
            <version>${spark.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.arrow</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_${scala.binary.version}</artifactId>
            <version>${scalatest.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.scalatestplus</groupId>
            <artifactId>junit-4-13_2.12</artifactId>
            <version>3.2.16.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>test</scope>
            <classifier>tests</classifier>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-catalyst_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>test</scope>
            <classifier>tests</classifier>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.arrow</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>test</scope>
            <classifier>tests</classifier>
            <exclusions>
                <exclusion>
                    <groupId>com.google.protobuf</groupId>
                    <artifactId>protobuf-java</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.hadoop</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-hive_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>4.9.0</version>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <perCoreThreadCount>false</perCoreThreadCount>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx4000m --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <!--<version>1.6.0</version>-->
                <configuration>
                    <flattenMode>ossrh</flattenMode>
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <createDependencyReducedPom>true</createDependencyReducedPom>
                    <useDependencyReducedPomInJar>true</useDependencyReducedPomInJar>
                    <artifactSet>
                        <includes>
                            <include>com.dmetasoul:lakesoul-spark</include>
                            <include>com.dmetasoul:lakesoul-common</include>
                            <include>com.dmetasoul:lakesoul-io-java</include>
                            <include>com.dmetasoul:lakesoul-spark-gluten</include>
                            <!-- do not include arrow-->
<!--                            <include>org.apache.arrow:*</include>-->
                            <include>com.github.jnr:*</include>
                            <include>org.ow2.asm:*</include>
                            <include>org.eclipse.collections:*</include>
                            <include>com.google.flatbuffers:*</include>
                            <include>com.zaxxer:HikariCP</include>
                            <include>org.postgresql:postgresql</include>
                            <include>com.alibaba:fastjson</include>
                            <include>mysql:mysql-connector-java</include>
                            <include>io.jhdf:jhdf</include>

                            <!-- casbin & aspectj -->
                            <include>org.casbin:jdbc-adapter</include>
                            <include>org.aspectj:aspectjrt</include>
                            <include>org.aspectj:aspectjweaver</include>
                            <include>org.apache.commons:commons-collections4</include>
                            <include>org.casbin:jcasbin</include>
                            <include>com.googlecode.aviator:aviator</include>
                            <include>com.github.seancfoley:ipaddress</include>
                            <include>commons-io:commons-io</include>
                            <include>org.apache.commons:commons-csv</include>
                            <include>com.google.code.gson:gson</include>
                            <include>dev.failsafe:failsafe</include>
                            <include>com.google.protobuf:protobuf-java</include>

                        </includes>
                    </artifactSet>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                                <exclude>META-INF/versions/**</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>com.dmetasoul:lakesoul-spark</artifact>
                            <excludes>
                                <exclude>org/apache/spark/sql/vectorized/GlutenUtils**</exclude>
                                <exclude>org/apache/spark/sql/lakesoul/rules/withPartitionAndOrdering**</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <relocations>
                        <relocation>
                            <pattern>com.zaxxer.hikari</pattern>
                            <shadedPattern>com.lakesoul.shaded.com.zaxxer.hikari</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.postgresql</pattern>
                            <shadedPattern>com.lakesoul.shaded.org.postgresql</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.alibaba.fastjson</pattern>
                            <shadedPattern>com.lakesoul.shaded.com.alibaba.fastjson</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.flatbuffers</pattern>
                            <shadedPattern>org.apache.gluten.shaded.com.google.flatbuffers</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.arrow.flatbuf</pattern>
                            <shadedPattern>org.apache.gluten.shaded.org.apache.arrow.flatbuf</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.arrow.memory</pattern>
                            <shadedPattern>org.apache.gluten.shaded.org.apache.arrow.memory</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.arrow.util</pattern>
                            <shadedPattern>org.apache.gluten.shaded.org.apache.arrow.util</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.arrow.vector</pattern>
                            <shadedPattern>org.apache.gluten.shaded.org.apache.arrow.vector</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.protobuf</pattern>
                            <shadedPattern>com.lakesoul.shaded.com.google.protobuf</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>dev.failsafe</pattern>
                            <shadedPattern>com.lakesoul.shaded.dev.failsafe</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.aspectj</pattern>
                            <shadedPattern>com.lakesoul.shaded.org.aspectj</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.checkerframework</pattern>
                            <shadedPattern>com.lakesoul.shaded.org.checkerframework</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.substrait</pattern>
                            <shadedPattern>com.lakesoul.shaded.io.substrait</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.stringtemplate</pattern>
                            <shadedPattern>com.lakesoul.shaded.org.stringtemplate</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.abego</pattern>
                            <shadedPattern>com.lakesoul.shaded.org.abego</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.ow2.asm</pattern>
                            <shadedPattern>com.lakesoul.shaded.org.ow2.asm</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.objectweb.asm</pattern>
                            <shadedPattern>com.lakesoul.shaded.org.objectweb.asm</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>